# limsync

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
doc/: plan.md
src/li_sync/: __init__.py  cli.py  compare.py  config.py  excludes.py  models.py  planner_apply.py  remote_helper.py  review_tui.py  scanner_local.py  scanner_remote.py  state_db.py  text_utils.py
src/li_sync/utils/: sanitize_locks.py
src/limsync/: cli.py  compare.py  config.py  deletion_intent.py  endpoints.py  excludes.py  ignore_rules_shared.py  modals.py  models.py  planner_apply.py  remote_helper.py  remote_metadata_helper.py  review_actions.py  review_tui.py  scanner_local.py  scanner_remote.py  ssh_pool.py  state_db.py  symlink_utils.py  tree_builder.py  view_filters.py
tests/: conftest.py  test_apply_cancel_modal.py  test_compare.py  test_deletion_intent.py  test_endpoints.py  test_excludes.py  test_planner_apply.py  test_remote_metadata_helper.py  test_review_filters.py  test_scanner_local.py  test_scanner_remote.py  test_ssh_pool.py  test_state_db.py  test_tree_builder.py  test_tree_scenarios.py  test_view_filters.py
