[project]
name = "li"
version = "0.1.0"
description = "Bidirectional interactive Dropbox-like sync over SSH"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blake3>=1.0.8",
    "paramiko>=4.0.0",
    "pathspec>=1.0.4",
    "rich>=14.3.2",
    "typer>=0.23.1",
]

[project.scripts]
li-sync = "li_sync.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_sync"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
